calendar overflow issue fixed? pt.2

--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ figure {
   top: 0;
   left: 0;
   height: 100%;
+  width: 100%;
 }
 
 .googleCalendar-mobile{
